--- a/portfolio.html
+++ b/portfolio.html
@@ -50,16 +50,16 @@
         </div>
         <div class="panel-body">
 	  <div class="image">
-        <a href="#">
+        <a href="https://rjaguero00.github.io/week-4-game/">
           <img alt="Skateboarding Recruiting Website" src="business-q-c-250-175-5.jpg">
-          <div id="text1a">Skateboarding Recruiting Website</div>
+          <div id="text1a">Random Number Generating Game</div>
         </a>
       </div>
 
       <div class="image">
-        <a href="#">
-          <img alt="Sports Video Game" src="sports-q-c-250-175-10.jpg">
-          <div id="text2a">Sports Video Game</div>
+        <a href="https://rjaguero00.github.io/TriviaGame/">
+          <img alt="MLB Trivia Quiz" src="sports-q-c-250-175-10.jpg">
+          <div id="text2a">MLB Trivia Quiz</div>
         </a>
       </div>
 
